Thu Aug 25 16:43:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Array_Impl_T.cpp:
        
          Added include of Any.h, similar to Any_Dual_Impl_T.cpp, needed
          when compiling code generated for arrays and not passing -Sa
          or -St to the IDL compiler.

Thu Aug 25 11:00:47 2005  Chris Cleeland  <cleeland_c@ociweb.com>

          This does two things in the Real Time Event Service:

          1. Added a new dispatching strategy--Thread Per Consumer.  This
          strategy is similar to the MT dispatching strategy in that it
          separates the thread that receives the push() from a supplier
          from the thread that does the eventual push() to the
          consumer(s), but it differs from MT in that MT has a pool of
          threads pulling from a single queue and ultimately potentially
          servicing every consumer, whereas TPC has a queue for *each*
          consumer and, thus, a single thread dedicated to pushing to that
          consumer.  This insures that a badly-behaved consumer CANNOT
          have an adverse effect on the channel or supplier.

          2. It adds a means by which an application can specify what the
          RTEC should do if the TAO_EC_Queue fills up.  This behavior is
          encapsulated in a derivation of an ACE_Service_Object, called
          TAO_EC_Queue_Full_Service_Object.  The RTEC looks for a service
          object of a particular name (default in macro
          TAO_EC_DEFAULT_QUEUE_FULL_SERVICE_OBJECT_NAME)

        * orbsvcs/orbsvcs/RTEvent_Serv.mpc:

          Updated to build new files that are part of the TPC strategy.

        * orbsvcs/orbsvcs/Event/EC_Default_Factory.h:

          Added new data member to hold the name of the service object
          used for queue full behavior.

        * orbsvcs/orbsvcs/Event/EC_Default_Factory.i:
        * orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp:
